tests/parser/tests/cases/should_fail/non_existant_import/case.hash
k := import("does_not_exist");
