tests/parser/tests/cases/should_fail/non_existant_import/case.stderr
error: couldn't import `does_not_exist`, module couldn't be found
 --> $DIR/case.hash:1:6
1 |   k := import("does_not_exist");
  |        ^^^^^^^^^^^^^^^^^^^^^^^^ here
